# Octoprint-BitBang

./: README.md  pyproject.toml
octoprint_bitbang/: __init__.py  app.py  octoprint_adapter.py  pi_camera_track.py  pi_h264_source.py  proxy.py
octoprint_bitbang/static/js/: bitbang.js
octoprint_bitbang/templates/: bitbang_navbar.jinja2  bitbang_settings.jinja2
